tests/call_properties/call_properties.exp
Error: A.js:8
  8:   return f();
              ^^^ string. This type is incompatible with the expected return type of
  7: function b(f: { (): string }): number {
                                    ^^^^^^ number

Error: A.js:13
 13:   return f("hello");
                ^^^^^^^ string. This type is incompatible with the expected param type of
 12: function c(f: { (x: number): number }): number {
                         ^^^^^^ number

Error: A.js:18
 18:   return f();
              ^ Cannot call `f` because function [1] requires another argument.
  References:
   17: function d(f: { (x: number): number }): number {
                       ^^^^^^^^^^^^^^^^^^^ [1]: function

Error: A.js:23
 23:   return f();
              ^^^ call of `f`. Callable signature not found in
 23:   return f();
              ^ object type

Error: A.js:29
 29:   return x();
              ^^^ call of `x`. Callable signature not found in
 29:   return x();
              ^ object literal

Error: B.js:5
  5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
  5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
              ^^^^^^^^^^^^^^^^^^^ function type
  The return is incompatible:
      5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
                                                                ^^^^^^ string. This type is incompatible with
      5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
                               ^^^^^^ number

Error: B.js:8
  8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
  8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
              ^^^^^^^^^^^^^^^^^^^ function type
  The first parameter is incompatible:
      8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
                      ^^^^^^ string. This type is incompatible with
      8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
                                                       ^^^^^^ number

Error: B.js:11
 11: var d: { (): string } = function (x: number): string { return "hi"; };
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function
 11: var d: { (): string } = function (x: number): string { return "hi"; };
              ^^^^^^^^^^ function type. Too few arguments passed to
 11: var d: { (): string } = function (x: number): string { return "hi"; };
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function

Error: C.js:7
  7: function b(x: { (z: number): string }): (z: number) => number {
                     ^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with the expected return type of
  7: function b(x: { (z: number): string }): (z: number) => number {
                                             ^^^^^^^^^^^^^^^^^^^^^ function type
  The return is incompatible:
      7: function b(x: { (z: number): string }): (z: number) => number {
                                      ^^^^^^ string. This type is incompatible with
      7: function b(x: { (z: number): string }): (z: number) => number {
                                                                ^^^^^^ number

Error: C.js:12
 12: function c(x: { (z: number): string }): (z: string) => string {
                     ^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with the expected return type of
 12: function c(x: { (z: number): string }): (z: string) => string {
                                             ^^^^^^^^^^^^^^^^^^^^^ function type
  The first parameter is incompatible:
     12: function c(x: { (z: number): string }): (z: string) => string {
                                                     ^^^^^^ string. This type is incompatible with
     12: function c(x: { (z: number): string }): (z: string) => string {
                             ^^^^^^ number

Error: C.js:17
 17: function d(x: { (z: number): string }): () => string {
                                             ^^^^^^^^^^^^ function type. Too few arguments passed to
 17: function d(x: { (z: number): string }): () => string {
                     ^^^^^^^^^^^^^^^^^^^ function type

Error: C.js:23
 23:   return x;
              ^ object type. This type is incompatible with the expected return type of
 22: function e(x: {}): () => string {
                        ^^^^^^^^^^^^ function type
  Callable property is incompatible:
     22: function e(x: {}): () => string {
                            ^^^^^^^^^^^^ function type. Callable signature not found in
     23:   return x;
                  ^ object type

Error: C.js:33
 33:   return x; // error
              ^ object type. This type is incompatible with the expected return type of
 32: function g(x: {}): Function {
                        ^^^^^^^^ function type
  Callable property is incompatible:
     32: function g(x: {}): Function {
                            ^^^^^^^^ function type. Callable signature not found in
     33:   return x; // error
                  ^ object type

Error: D.js:12
 12:   function (x: number): string { return "hi"; };
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function
 11: var c: { (): string; (x: number): string } =
              ^^^^^^^^^^ function type. Too few arguments passed to
 12:   function (x: number): string { return "hi"; };
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function

Error: D.js:20
 20: function e(x: { (): string; (x: number): string }): () => number {
                     ^^^^^^^^^^ function type. This type is incompatible with the expected return type of
 20: function e(x: { (): string; (x: number): string }): () => number {
                                                         ^^^^^^^^^^^^ function type
  The return is incompatible:
     20: function e(x: { (): string; (x: number): string }): () => number {
                             ^^^^^^ string. This type is incompatible with
     20: function e(x: { (): string; (x: number): string }): () => number {
                                                                   ^^^^^^ number

Error: E.js:2
  2: var a : { someProp: number } = function () {};
                                    ^^^^^^^^^^^^^^ function. This type is incompatible with
  2: var a : { someProp: number } = function () {};
             ^^^^^^^^^^^^^^^^^^^^ object type
  Property `someProp` is incompatible:
      2: var a : { someProp: number } = function () {};
                 ^^^^^^^^^^^^^^^^^^^^ property `someProp` of object type. Property not found in
      2: var a : { someProp: number } = function () {};
                                        ^^^^^^^^^^^^^^ function

Error: F.js:6
  6: var b: { (x: number): number } = (x) => "hi"
                                      ^^^^^^^^^^^ function. This type is incompatible with
  6: var b: { (x: number): number } = (x) => "hi"
              ^^^^^^^^^^^^^^^^^^^ function type
  The return is incompatible:
      6: var b: { (x: number): number } = (x) => "hi"
                                                 ^^^^ string. This type is incompatible with
      6: var b: { (x: number): number } = (x) => "hi"
                               ^^^^^^ number

Error: F.js:9
  9: var c: { (x: string): string } = (x) => x.toFixed()
                                               ^^^^^^^ property `toFixed`. Property not found in
  9: var c: { (x: string): string } = (x) => x.toFixed()
                                             ^ String

Error: use_ops.js:4
  4: (a: B); // error HERE and preserve use ops
      ^ A. This type is incompatible with
  4: (a: B); // error HERE and preserve use ops
         ^ B
  Property `p` is incompatible:
      1: type A = { p: {} }
                       ^^ object type. This type is incompatible with
      2: type B = { +p: () => void }
                        ^^^^^^^^^^ function type
      Callable property is incompatible:
          2: type B = { +p: () => void }
                            ^^^^^^^^^^ function type. Callable signature not found in
          1: type A = { p: {} }
                           ^^ object type


Found 19 errors
